# torrbot

./: .gitignore  Pipfile  README.md  config_example.yaml  pyproject.toml  requirements.txt  scraper.py  torrbot.py  torrbot_completedNotification.sh
src/: bot_commands.py  config_loader.py  scraper.py  torrbot.py
src/config/: config_example.yaml
