[tool.poetry]
name = "torrbot"
version = "0.1.0"
description = "Telegram bot to scrape torrents from piratebay and add them to transmission"
authors = ["Christoph Schönenberger <ch.schoenenberger@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.0"
transmission-rpc = "^3.2.2"
python-telegram-bot = "^13.1"
bs4 = "^0.0.1"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pandas = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
